[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jun-skills-hwpx-v2"
version = "2.0.0"
description = "Unified HWPX MCP server: Markdown→HWPX + HWPX template→HWPX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "이창준 (cjLee-cmd)" }
]
keywords = ["hwpx", "markdown", "hancom", "hangul", "mcp", "converter", "template"]

dependencies = [
    "fastmcp>=0.1.0",
    "lxml>=4.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
